[gd_scene load_steps=9 format=3 uid="uid://by3hrvsumeagg"]

[ext_resource type="Texture2D" uid="uid://d15cd2j6ym3l8" path="res://scenes/ui/player_select/panel-select.png" id="1_mmqhm"]
[ext_resource type="Script" path="res://scenes/ui/player_select/character_select.gd" id="1_yu010"]
[ext_resource type="Texture2D" uid="uid://qc4sb8w2skse" path="res://scenes/fish/fish.png" id="3_6r1cd"]
[ext_resource type="Texture2D" uid="uid://bvngy07albqjn" path="res://scenes/ui/player_select/stats.png" id="3_fxlt5"]
[ext_resource type="Texture2D" uid="uid://ckyx3bmpe8wy8" path="res://scenes/ui/player_select/rate-1.png" id="5_btyrp"]
[ext_resource type="Texture2D" uid="uid://ctomrrgdd0vlc" path="res://scenes/ui/player_select/arrow-right.png" id="6_guljt"]
[ext_resource type="StyleBox" uid="uid://c1ixi1cj01pkn" path="res://scenes/ui/player_select/focus_flat.tres" id="6_qjae1"]
[ext_resource type="Texture2D" uid="uid://g7w2hb3nda5k" path="res://scenes/ui/player_select/arrow-left.png" id="7_ataap"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -197.0
offset_bottom = -216.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu010")

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 11.0
offset_right = 101.0
offset_bottom = 30.0
texture = ExtResource("1_mmqhm")
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="TextureRect3"]
clip_children = 1
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 89.0
offset_bottom = 29.0

[node name="FishTexture" type="TextureRect" parent="TextureRect3/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -12.0
offset_right = 36.0
offset_bottom = 12.0
grow_vertical = 2
texture = ExtResource("3_6r1cd")
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="TextureRect3/ColorRect"]
layout_mode = 0
offset_left = 41.0
offset_top = 5.0
offset_right = 61.0
offset_bottom = 24.0
texture = ExtResource("3_fxlt5")
stretch_mode = 2

[node name="StatAccel" type="TextureRect" parent="TextureRect3/ColorRect"]
modulate = Color(1, 1, 0.105882, 1)
layout_mode = 0
offset_left = 66.0
offset_top = 6.0
offset_right = 84.0
offset_bottom = 10.0
texture = ExtResource("5_btyrp")
stretch_mode = 2

[node name="StatSpeed" type="TextureRect" parent="TextureRect3/ColorRect"]
modulate = Color(1, 1, 0.105882, 1)
layout_mode = 0
offset_left = 66.0
offset_top = 13.0
offset_right = 84.0
offset_bottom = 17.0
texture = ExtResource("5_btyrp")
stretch_mode = 2

[node name="StatStrength" type="TextureRect" parent="TextureRect3/ColorRect"]
modulate = Color(1, 1, 0.105882, 1)
layout_mode = 0
offset_left = 66.0
offset_top = 20.0
offset_right = 84.0
offset_bottom = 24.0
texture = ExtResource("5_btyrp")
stretch_mode = 2

[node name="ButtonNext" type="Button" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 9.0
offset_right = 112.0
offset_bottom = 22.0
theme_override_styles/focus = ExtResource("6_qjae1")
icon = ExtResource("6_guljt")
flat = true

[node name="ButtonPrev" type="Button" parent="."]
layout_mode = 0
offset_top = 9.0
offset_right = 12.0
offset_bottom = 22.0
theme_override_styles/focus = ExtResource("6_qjae1")
icon = ExtResource("7_ataap")
flat = true
